[package]
name = "negahban"
authors = ["aarmn <aarmn80@gmail.com>"]
homepage = "https://github.com/aarmn/negahban" # acctually repo
repository = "https://github.com/aarmn/negahban"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "readme.md" # readme-cargo.md
description = "🕵 A better and simple file watcher, based on notify, designed to be simple and async friendly"
rust-version = "1.67.0"
# include = 
# exclude = ["assets/", "tools/", ".github/", "crates/"]

categories = ["game-engines", "graphics", "gui", "rendering"]
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]


[dependencies]
derivative = "2.2.0"
notify = {version = "5.1.0", features = ["mio"], optional = false}

[dev-dependencies]
